# uba-aed3-tp3-2c-2019

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cvrp_test[1]_include.cmake
experimentacion/: template_experimentación.ipynb
experimentacion/.ipynb_checkpoints/: template_experimentación-checkpoint.ipynb
experimentacion/instancias/: A-n32-k5.txt  B-n31-k5.txt  M-n101-k10.txt  X-n502-k39.txt
lib/googletest/googlemock/scripts/generator/cpp/: tokenize.py
lib/googletest/googlemock/test/: gmock-matchers_test.cc
src/algorithms/: CVRPEuristic.h  CVRPHeuristic.h  GreedyEuristic.cpp  GreedyEuristic.h  GreedyHeuristic.cpp  GreedyHeuristic.h  NearestNeighborAGM.cpp  NearestNeighborAGM.h  NearestNeighborSweep.cpp  NearestNeighborSweep.h  NearestNeighborSweepClustering.cpp  NearestNeighborSweepClustering.h  NearestNeighborTsp.cpp  NearestNeighborTsp.h  SavingsEuristic.cpp  SavingsEuristic.h  SavingsHeuristic.cpp  SavingsHeuristic.h  SimulatingAnnealingHeuristic.cpp  SimulatingAnnealingHeuristic.h  cfrsAGM.cpp  cfrsAGM.h  cfrsSweep.cpp  cfrsSweep.h  tspNearestNeighbour.cpp  tspNearestNeighbour.h
src/algorithms/utils/: MakePolarCoordenatesCenteredInDepot.cpp  MakePolarCoordenatesCenteredInDepot.h  ValidateOutputCvrp.cpp  ValidateOutputCvrp.h
src/config/: defaults.h
src/entities/core/: AdjacencyMatrixGraph.cpp  AdjacencyMatrixGraph.h  AdyacencyMatrixGraph.cpp  AdyacencyMatrixGraph.h  Constants.h  Dot.cpp  Dot.h  Graph.h  Route.h  Station.h  VertexCoordinate.h
src/entities/entrypoint/: InputCVRP.cpp  InputCVRP.h  OutputCVRP.cpp  OutputCVRP.h
src/entities/legacy/algoritmos/: KruskalAlgorithm.cpp  KruskalAlgorithm.h  MSTAlgorithm.h  PrimAlgorithm.cpp  PrimAlgorithm.h  Segmentation.cpp  Segmentation.h
src/entities/legacy/algoritmos/estructuras-auxiliares/: ArrayCompressedDisjoinSet.cpp  ArrayCompressedDisjoinSet.h  ArrayDisjoinSet.cpp  ArrayDisjoinSet.h  DisjoinSet.h
src/entities/legacy/entities/: AdyacencyMatrixGraph.cpp  AdyacencyMatrixGraph.h  Edge.cpp  Edge.h  Graph.h  KruskalKindOfGraph.cpp  KruskalKindOfGraph.h  TreeGraph.cpp  TreeGraph.h  Utils.h
src/executables/: cluster_alternative_main.cpp  cluster_main.cpp  goloso-main.cpp  goloso_main.cpp  greedy-main.cpp  output_example.cpp  sa_main.cpp  savings-main.cpp  savings_main.cpp
src/utils/: AlgorithmMain.h  CVRP.cpp  CVRP.h  QuickSort.cpp  QuickSort.h  graficarSolucion.py  io.hpp  util.hpp
test/: cws_test.cpp  input_cvrp_test.cpp  main.cpp  output_cvrp_test.cpp  sa_test.cpp
test/algorithms/: GreedyHeuristicTest.cpp  NearestNeighborSweepClusteringTest.cpp  NearestNeighborSweepTest.cpp  NearestNeighbourTspTest.cpp
test/algorithms/utils/: MakePolarCoordatesCenteredInDepotTest.cpp  ValidateOutputCvrpTest.cpp
test/config/: constants.h  results.h
test/data/input/: A-n32-k5.txt  X-n502-k39.txt  input-example.txt
test/data/output/: A-n33-k5-SOL.txt
test/utils/: IO.cpp  IO.h
